--- a/archives.html
+++ b/archives.html
@@ -22,11 +22,7 @@
 
 <dl>
     <dt>周五 02 五月 2014</dt>
-    <dd><a href="/my-third-post.html">My third Post!</a></dd>
-    <dt>周四 01 五月 2014</dt>
-    <dd><a href="/my-first-blod.html">My first Blod!</a></dd>
-    <dt>周四 01 五月 2014</dt>
-    <dd><a href="/how-about-going-to-the-film.html">How about going to the film?</a></dd>
+    <dd><a href="/about-this-site.html">About this site!</a></dd>
 </dl>
 </section>
         <section id="extras" class="body">
