--- a/archives.html
+++ b/archives.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="canonical" href="https://jiangtao.me/archives.html" />
+    <link rel="canonical" href="http://jiangtao.me/archives.html" />
 
     <title>  jiangtao &mdash; Archives
 </title>
@@ -13,7 +13,7 @@
 
 
 
-    <link rel="stylesheet" href="https://jiangtao.me/theme/css/style.css">
+    <link rel="stylesheet" href="http://jiangtao.me/theme/css/style.css">
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -26,11 +26,11 @@
 <header class="header">
   <div class="container">
       <div class="header-image pull-left">
-        <a class="nodec" href="https://jiangtao.me"><img src=https://avatars2.githubusercontent.com/u/3675980?v=3&s=400></a>
+        <a class="nodec" href="http://jiangtao.me"><img src=https://avatars2.githubusercontent.com/u/3675980?v=3&s=400></a>
       </div>
     <div class="header-inner">
       <h1 class="header-name">
-        <a class="nodec" href="https://jiangtao.me">jiangtao</a>
+        <a class="nodec" href="http://jiangtao.me">jiangtao</a>
       </h1>
       <h3 class="header-text"></h3>
       <ul class="header-menu list-inline">
@@ -46,21 +46,21 @@
   <h1>Archives</h1>
   <dl class="list dl-horizontal">
       <dt>一 21 三月 2016</dt>
-      <dd><a href="https://jiangtao.me/jetbrains-makes-its-products-free-for-students.html">JetBrains Makes its Products Free for Students</a></dd>
+      <dd><a href="http://jiangtao.me/jetbrains-makes-its-products-free-for-students.html">JetBrains Makes its Products Free for Students</a></dd>
       <dt>一 21 三月 2016</dt>
-      <dd><a href="https://jiangtao.me/ce-shi-markdown.html">测试markdown</a></dd>
+      <dd><a href="http://jiangtao.me/ce-shi-markdown.html">测试markdown</a></dd>
       <dt>四 11 九月 2014</dt>
-      <dd><a href="https://jiangtao.me/the-way-to-access-google-in-china.html">The way to access Google in China</a></dd>
+      <dd><a href="http://jiangtao.me/the-way-to-access-google-in-china.html">The way to access Google in China</a></dd>
       <dt>日 31 八月 2014</dt>
-      <dd><a href="https://jiangtao.me/linux-an-zhuang-telnet.html">Linux 安装 Telnet</a></dd>
+      <dd><a href="http://jiangtao.me/linux-an-zhuang-telnet.html">Linux 安装 Telnet</a></dd>
       <dt>六 30 八月 2014</dt>
-      <dd><a href="https://jiangtao.me/ru-he-gou-mai-digitaloceande-vps-zhu-ji.html">如何购买Digitalocean的 VPS 主机</a></dd>
+      <dd><a href="http://jiangtao.me/ru-he-gou-mai-digitaloceande-vps-zhu-ji.html">如何购买Digitalocean的 VPS 主机</a></dd>
       <dt>四 28 八月 2014</dt>
-      <dd><a href="https://jiangtao.me/vim-markdown-plugin-setup-with-vba-document-windows-7.html">Vim markdown-plugin setup with .vba document (windows 7)</a></dd>
+      <dd><a href="http://jiangtao.me/vim-markdown-plugin-setup-with-vba-document-windows-7.html">Vim markdown-plugin setup with .vba document (windows 7)</a></dd>
       <dt>二 26 八月 2014</dt>
-      <dd><a href="https://jiangtao.me/setup-a-blog-with-scriptogram-and-dropbox.html">Setup a blog with scriptogr.am and dropbox</a></dd>
+      <dd><a href="http://jiangtao.me/setup-a-blog-with-scriptogram-and-dropbox.html">Setup a blog with scriptogr.am and dropbox</a></dd>
       <dt>五 02 五月 2014</dt>
-      <dd><a href="https://jiangtao.me/about-this-site.html">About this site!</a></dd>
+      <dd><a href="http://jiangtao.me/about-this-site.html">About this site!</a></dd>
   </dl>
   </div>
 <footer class="footer">
@@ -73,8 +73,8 @@
     </div>
   </div>
 </footer> <!-- /.footer -->
-  <script src="https://jiangtao.me/theme/js/jquery.min.js"></script>
-  <script src="https://jiangtao.me/theme/js/bootstrap.min.js"></script>
+  <script src="http://jiangtao.me/theme/js/jquery.min.js"></script>
+  <script src="http://jiangtao.me/theme/js/bootstrap.min.js"></script>
 </body> <!-- 42 -->
 
 </html>
