--- a/authors.html
+++ b/authors.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="canonical" href="http://jiangtao.me/authors.html" />
+    <link rel="canonical" href="/authors.html" />
 
     <title>  jiangtao &mdash; Authors
 </title>
@@ -13,7 +13,7 @@
 
 
 
-    <link rel="stylesheet" href="http://jiangtao.me/theme/css/style.css">
+    <link rel="stylesheet" href="/theme/css/style.css">
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -26,11 +26,11 @@
 <header class="header">
   <div class="container">
       <div class="header-image pull-left">
-        <a class="nodec" href="http://jiangtao.me"><img src=https://avatars2.githubusercontent.com/u/3675980?v=3&s=400></a>
+        <a class="nodec" href=""><img src=https://avatars2.githubusercontent.com/u/3675980?v=3&s=400></a>
       </div>
     <div class="header-inner">
       <h1 class="header-name">
-        <a class="nodec" href="http://jiangtao.me">jiangtao</a>
+        <a class="nodec" href="">jiangtao</a>
       </h1>
       <h3 class="header-text"></h3>
       <ul class="header-menu list-inline">
@@ -45,7 +45,7 @@
 </header> <!-- /.header -->  <div class="container">
   <h1>Authors on jiangtao</h1>
   <ul class="list-unstyled">
-      <li><a href="http://jiangtao.me/author/jiangtao.html">jiangtao</a> (8)</li>
+      <li><a href="/author/jiangtao.html">jiangtao</a> (8)</li>
   </ul>
   </div>
 <footer class="footer">
@@ -58,8 +58,8 @@
     </div>
   </div>
 </footer> <!-- /.footer -->
-  <script src="http://jiangtao.me/theme/js/jquery.min.js"></script>
-  <script src="http://jiangtao.me/theme/js/bootstrap.min.js"></script>
+  <script src="/theme/js/jquery.min.js"></script>
+  <script src="/theme/js/bootstrap.min.js"></script>
 </body> <!-- 42 -->
 
 </html>
