--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 <header class="header">
   <div class="container">
       <div class="header-image pull-left">
-        <a class="nodec" href=""><img src=https://avatars2.githubusercontent.com/u/3675980?v=3&s=400></a>
+        <a class="nodec" href="/index.html"><img src=https://avatars2.githubusercontent.com/u/3675980?v=3&s=400></a>
       </div>
     <div class="header-inner">
       <h1 class="header-name">
-        <a class="nodec" href="">jiangtao</a>
+        <a class="nodec" href="/index.html">jiangtao</a>
       </h1>
       <h3 class="header-text"></h3>
       <ul class="header-menu list-inline">
