reset to last version

--- a/valid-phone-numbers-with-shell-script.html
+++ b/valid-phone-numbers-with-shell-script.html
@@ -81,7 +81,7 @@ Given a text file file.txt that contains list of phone numbers (one per line), w
 
 
 <blockquote>
-<p><em>file.txt:</em>
+<p><strong>file.txt:</strong>
 156-355-0923
 142-902-901
 (142) 892-0913
@@ -89,7 +89,7 @@ Given a text file file.txt that contains list of phone numbers (one per line), w
 (450)091-2034
 13-092-9930
 124-091</p>
-<p><em>Code operation results:</em>
+<p><strong>Code operation results:</strong>
 1156-355-0923
 (142) 892-0913
 <a href="https://leetcode.com/problems/valid-phone-numbers/">Read it on leetcode.com</a></p>
