update shell script blog

--- a/valid-phone-numbers-with-shell-script.html
+++ b/valid-phone-numbers-with-shell-script.html
@@ -81,19 +81,24 @@ Given a text file file.txt that contains list of phone numbers (one per line), w
 
 
 <blockquote>
-<p><strong>file.txt:</strong>
-156-355-0923
-142-902-901
-(142) 892-0913
-(23) 991-0024
-(450)091-2034
-13-092-9930
-124-091</p>
-<p><strong>Code operation results:</strong>
-1156-355-0923
-(142) 892-0913
-<a href="https://leetcode.com/problems/valid-phone-numbers/">Read it on leetcode.com</a></p>
+<p><strong>file.txt:</strong></p>
+<p>156-355-0923</p>
+<p>142-902-901</p>
+<p>(142) 892-0913</p>
+<p>(23) 991-0024</p>
+<p>(450)091-2034</p>
+<p>13-092-9930</p>
+<p>124-091
+</p>
 </blockquote>
+<hr />
+<blockquote>
+<p><strong>Code operation results:</strong></p>
+<p>1156-355-0923</p>
+<p>(142) 892-0913
+</p>
+</blockquote>
+<p><a href="https://leetcode.com/problems/valid-phone-numbers/">Read it on leetcode.com</a></p>
     </div>
   </div>
   <hr class="separator">
