update categorys for blogs

--- a/categories.html
+++ b/categories.html
@@ -45,7 +45,11 @@
 </header> <!-- /.header -->  <div class="container">
   <h1>Categories on jiangtao</h1>
   <ul class="list-unstyled">
+      <li><a href="/category/about.html">about</a></li>
+      <li><a href="/category/dev-tools.html">dev-tools</a></li>
       <li><a href="/category/misc.html">misc</a></li>
+      <li><a href="/category/shell.html">shell</a></li>
+      <li><a href="/category/vps.html">vps</a></li>
   </ul>
   </div>
 <footer class="footer">
