--- a/tags.html
+++ b/tags.html
@@ -48,11 +48,14 @@
       <li><a href="/tag/bash.html">bash</a> (3)</li>
       <li><a href="/tag/bc.html">bc</a> (1)</li>
       <li><a href="/tag/ide.html">ide</a> (1)</li>
-      <li><a href="/tag/linux.html">linux</a> (3)</li>
+      <li><a href="/tag/linux.html">linux</a> (4)</li>
+      <li><a href="/tag/markdown.html">markdown</a> (1)</li>
       <li><a href="/tag/regex.html">regex</a> (1)</li>
       <li><a href="/tag/shell.html">shell</a> (3)</li>
+      <li><a href="/tag/telnet.html">telnet</a> (1)</li>
       <li><a href="/tag/tools.html">tools</a> (1)</li>
       <li><a href="/tag/unix.html">unix</a> (2)</li>
+      <li><a href="/tag/vim.html">vim</a> (1)</li>
   </ul>
   </div>
 <footer class="footer">
