--- a/categories.html
+++ b/categories.html
@@ -48,6 +48,7 @@
       <li><a href="/category/about.html">about</a></li>
       <li><a href="/category/dev-tools.html">dev-tools</a></li>
       <li><a href="/category/misc.html">misc</a></li>
+      <li><a href="/category/python.html">python</a></li>
       <li><a href="/category/shell.html">shell</a></li>
       <li><a href="/category/vps.html">vps</a></li>
   </ul>
