--- a/tags.html
+++ b/tags.html
@@ -52,6 +52,8 @@
       <li><a href="/tag/markdown.html">markdown</a> (1)</li>
       <li><a href="/tag/regex.html">regex</a> (1)</li>
       <li><a href="/tag/shell.html">shell</a> (3)</li>
+      <li><a href="/tag/socket.html">socket</a> (1)</li>
+      <li><a href="/tag/tcp.html">tcp</a> (1)</li>
       <li><a href="/tag/telnet.html">telnet</a> (1)</li>
       <li><a href="/tag/tools.html">tools</a> (1)</li>
       <li><a href="/tag/unix.html">unix</a> (2)</li>
