upload blog: calloc and malloc

--- a/archives.html
+++ b/archives.html
@@ -71,6 +71,8 @@
       <dd><a href="/setup-a-blog-with-scriptogram-and-dropbox.html">Setup a blog with scriptogr.am and dropbox</a></dd>
       <dt>五 02 五月 2014</dt>
       <dd><a href="/about-this-site.html">About this site!</a></dd>
+      <dt>四 28 二月 2013</dt>
+      <dd><a href="/calloche-malloc.html">calloc和malloc</a></dd>
   </dl>
   </div>
 <footer class="footer">
