--- a/categories.html
+++ b/categories.html
@@ -46,6 +46,7 @@
   <h1>Categories on jiangtao</h1>
   <ul class="list-unstyled">
       <li><a href="/category/about.html">about</a></li>
+      <li><a href="/category/cc.html">c/c++</a></li>
       <li><a href="/category/dev-tools.html">dev-tools</a></li>
       <li><a href="/category/misc.html">misc</a></li>
       <li><a href="/category/python.html">python</a></li>
