--- a/archives.html
+++ b/archives.html
@@ -73,6 +73,14 @@
       <dd><a href="/about-this-site.html">About this site!</a></dd>
       <dt>四 28 二月 2013</dt>
       <dd><a href="/calloche-malloc.html">calloc和malloc</a></dd>
+      <dt>六 02 二月 2013</dt>
+      <dd><a href="/tkinter-a-gui-for-python.html">Tkinter, a Gui for python</a></dd>
+      <dt>一 21 一月 2013</dt>
+      <dd><a href="/wind7pi-chu-li-she-zhi-ipbatchjiao-ben.html">wind7批处理设置IP（BATCH脚本）</a></dd>
+      <dt>三 05 十二月 2012</dt>
+      <dd><a href="/python-wang-luo-bian-cheng-socket_serverdan-xian-cheng-xiang-ying-qing-qiu.html">Python 网络编程socket_server单线程响应请求</a></dd>
+      <dt>六 30 六月 2012</dt>
+      <dd><a href="/ji-yu-pic16f883xin-pian-de-hui-bian-miao-shan-ledshi-yan.html">基于pic16f883芯片的汇编秒闪LED实验</a></dd>
   </dl>
   </div>
 <footer class="footer">
