--- a/categories.html
+++ b/categories.html
@@ -48,10 +48,12 @@
       <li><a href="/category/about.html">about</a></li>
       <li><a href="/category/cc.html">c/c++</a></li>
       <li><a href="/category/dev-tools.html">dev-tools</a></li>
+      <li><a href="/category/mcusinglechip.html">MCU,singlechip</a></li>
       <li><a href="/category/misc.html">misc</a></li>
       <li><a href="/category/python.html">python</a></li>
       <li><a href="/category/shell.html">shell</a></li>
       <li><a href="/category/vps.html">vps</a></li>
+      <li><a href="/category/wind7batch.html">wind7,batch</a></li>
   </ul>
   </div>
 <footer class="footer">
