--- a/tags.html
+++ b/tags.html
@@ -49,21 +49,34 @@
       <li><a href="/tag/bc.html">bc</a> (1)</li>
       <li><a href="/tag/c.html">c</a> (1)</li>
       <li><a href="/tag/calloc.html">calloc</a> (1)</li>
+      <li><a href="/tag/dan-xian-cheng.html">单线程</a> (1)</li>
+      <li><a href="/tag/ding-shi-qi.html">定时器</a> (1)</li>
+      <li><a href="/tag/gui.html">GUI</a> (1)</li>
+      <li><a href="/tag/hui-bian.html">汇编</a> (1)</li>
       <li><a href="/tag/ide.html">ide</a> (1)</li>
+      <li><a href="/tag/ip.html">ip</a> (1)</li>
       <li><a href="/tag/kqueue.html">kqueue</a> (1)</li>
+      <li><a href="/tag/led.html">LED</a> (1)</li>
       <li><a href="/tag/linux.html">linux</a> (4)</li>
       <li><a href="/tag/malloc.html">malloc</a> (1)</li>
       <li><a href="/tag/markdown.html">markdown</a> (1)</li>
       <li><a href="/tag/nei-cun.html">内存</a> (1)</li>
+      <li><a href="/tag/network.html">network</a> (1)</li>
+      <li><a href="/tag/pi-chu-li.html">批处理</a> (1)</li>
+      <li><a href="/tag/pic16f883.html">PIC16F883</a> (1)</li>
       <li><a href="/tag/regex.html">regex</a> (1)</li>
       <li><a href="/tag/select.html">select</a> (1)</li>
+      <li><a href="/tag/server.html">server</a> (1)</li>
+      <li><a href="/tag/shan-deng.html">闪灯</a> (1)</li>
       <li><a href="/tag/shell.html">shell</a> (3)</li>
-      <li><a href="/tag/socket.html">socket</a> (2)</li>
+      <li><a href="/tag/socket.html">socket</a> (3)</li>
       <li><a href="/tag/tcp.html">tcp</a> (2)</li>
       <li><a href="/tag/telnet.html">telnet</a> (1)</li>
+      <li><a href="/tag/tkinter.html">Tkinter</a> (1)</li>
       <li><a href="/tag/tools.html">tools</a> (1)</li>
       <li><a href="/tag/unix.html">unix</a> (2)</li>
       <li><a href="/tag/vim.html">vim</a> (1)</li>
+      <li><a href="/tag/wind7.html">wind7</a> (1)</li>
   </ul>
   </div>
 <footer class="footer">
