upload blog: mcu blogs

--- a/archives.html
+++ b/archives.html
@@ -79,6 +79,10 @@
       <dd><a href="/wind7pi-chu-li-she-zhi-ipbatchjiao-ben.html">wind7批处理设置IP（BATCH脚本）</a></dd>
       <dt>三 05 十二月 2012</dt>
       <dd><a href="/python-wang-luo-bian-cheng-socket_serverdan-xian-cheng-xiang-ying-qing-qiu.html">Python 网络编程socket_server单线程响应请求</a></dd>
+      <dt>二 03 七月 2012</dt>
+      <dd><a href="/picdan-pian-ji-an-jian-jian-ce-dan-shuang-ji-chang-duan-an-shi-bie.html">PIC单片机按键检测，单双击、长短按识别</a></dd>
+      <dt>一 02 七月 2012</dt>
+      <dd><a href="/dan-pian-ji-shi-xian-an-jian-xing-lie-sao-miao-zhun-que-shi-bie-an-jian-shu-ma-guan-xian-shi-an-jian-bian-hao.html">单片机实现按键行列扫描，准确识别按键，数码管显示按键编号</a></dd>
       <dt>六 30 六月 2012</dt>
       <dd><a href="/ji-yu-pic16f883xin-pian-de-hui-bian-miao-shan-ledshi-yan.html">基于pic16f883芯片的汇编秒闪LED实验</a></dd>
   </dl>
