--- a/tags.html
+++ b/tags.html
@@ -45,6 +45,8 @@
 </header> <!-- /.header -->  <div class="container">
   <h1>Tags on jiangtao</h1>
   <ul class="list-unstyled">
+      <li><a href="/tag/an-jian.html">按键</a> (1)</li>
+      <li><a href="/tag/an-jian-jian-ce.html">按键检测</a> (1)</li>
       <li><a href="/tag/bash.html">bash</a> (3)</li>
       <li><a href="/tag/bc.html">bc</a> (1)</li>
       <li><a href="/tag/c.html">c</a> (1)</li>
@@ -60,15 +62,18 @@
       <li><a href="/tag/linux.html">linux</a> (4)</li>
       <li><a href="/tag/malloc.html">malloc</a> (1)</li>
       <li><a href="/tag/markdown.html">markdown</a> (1)</li>
+      <li><a href="/tag/mcu.html">mcu</a> (2)</li>
       <li><a href="/tag/nei-cun.html">内存</a> (1)</li>
       <li><a href="/tag/network.html">network</a> (1)</li>
       <li><a href="/tag/pi-chu-li.html">批处理</a> (1)</li>
-      <li><a href="/tag/pic16f883.html">PIC16F883</a> (1)</li>
+      <li><a href="/tag/pic16f883.html">pic16f883</a> (3)</li>
       <li><a href="/tag/regex.html">regex</a> (1)</li>
       <li><a href="/tag/select.html">select</a> (1)</li>
       <li><a href="/tag/server.html">server</a> (1)</li>
       <li><a href="/tag/shan-deng.html">闪灯</a> (1)</li>
       <li><a href="/tag/shell.html">shell</a> (3)</li>
+      <li><a href="/tag/shu-ma-guan.html">数码管</a> (2)</li>
+      <li><a href="/tag/shuang-ji-shi-bie.html">双击识别</a> (1)</li>
       <li><a href="/tag/socket.html">socket</a> (3)</li>
       <li><a href="/tag/tcp.html">tcp</a> (2)</li>
       <li><a href="/tag/telnet.html">telnet</a> (1)</li>
@@ -77,6 +82,7 @@
       <li><a href="/tag/unix.html">unix</a> (2)</li>
       <li><a href="/tag/vim.html">vim</a> (1)</li>
       <li><a href="/tag/wind7.html">wind7</a> (1)</li>
+      <li><a href="/tag/xing-lie-jian-ce.html">行列检测</a> (1)</li>
   </ul>
   </div>
 <footer class="footer">
