upload DAC/EUSART blog

--- a/tags.html
+++ b/tags.html
@@ -51,9 +51,14 @@
       <li><a href="/tag/bc.html">bc</a> (1)</li>
       <li><a href="/tag/c.html">c</a> (1)</li>
       <li><a href="/tag/calloc.html">calloc</a> (1)</li>
+      <li><a href="/tag/chuan-kou-tong-xin.html">串口通信</a> (1)</li>
+      <li><a href="/tag/dac.html">DAC</a> (1)</li>
+      <li><a href="/tag/dan-pian-ji.html">单片机</a> (1)</li>
       <li><a href="/tag/dan-xian-cheng.html">单线程</a> (1)</li>
       <li><a href="/tag/ding-shi-qi.html">定时器</a> (1)</li>
+      <li><a href="/tag/eusart.html">EUSART</a> (1)</li>
       <li><a href="/tag/gui.html">GUI</a> (1)</li>
+      <li><a href="/tag/hu-xi-deng-shu-mo-zhuan-huan.html">呼吸灯，数模转换</a> (1)</li>
       <li><a href="/tag/hui-bian.html">汇编</a> (1)</li>
       <li><a href="/tag/ide.html">ide</a> (1)</li>
       <li><a href="/tag/ip.html">ip</a> (1)</li>
@@ -66,7 +71,7 @@
       <li><a href="/tag/nei-cun.html">内存</a> (1)</li>
       <li><a href="/tag/network.html">network</a> (1)</li>
       <li><a href="/tag/pi-chu-li.html">批处理</a> (1)</li>
-      <li><a href="/tag/pic16f883.html">pic16f883</a> (3)</li>
+      <li><a href="/tag/pic16f883.html">pic16f883</a> (5)</li>
       <li><a href="/tag/regex.html">regex</a> (1)</li>
       <li><a href="/tag/select.html">select</a> (1)</li>
       <li><a href="/tag/server.html">server</a> (1)</li>
@@ -74,10 +79,12 @@
       <li><a href="/tag/shell.html">shell</a> (3)</li>
       <li><a href="/tag/shu-ma-guan.html">数码管</a> (2)</li>
       <li><a href="/tag/shuang-ji-shi-bie.html">双击识别</a> (1)</li>
+      <li><a href="/tag/shuang-xiang-shu-ju-chuan-shu.html">双向数据传输</a> (1)</li>
       <li><a href="/tag/socket.html">socket</a> (3)</li>
       <li><a href="/tag/tcp.html">tcp</a> (2)</li>
       <li><a href="/tag/telnet.html">telnet</a> (1)</li>
       <li><a href="/tag/tkinter.html">Tkinter</a> (1)</li>
+      <li><a href="/tag/tlc5615.html">TLC5615</a> (1)</li>
       <li><a href="/tag/tools.html">tools</a> (1)</li>
       <li><a href="/tag/unix.html">unix</a> (2)</li>
       <li><a href="/tag/vim.html">vim</a> (1)</li>
