--- a/archives.html
+++ b/archives.html
@@ -79,6 +79,10 @@
       <dd><a href="/wind7pi-chu-li-she-zhi-ipbatchjiao-ben.html">wind7批处理设置IP（BATCH脚本）</a></dd>
       <dt>三 05 十二月 2012</dt>
       <dd><a href="/python-wang-luo-bian-cheng-socket_serverdan-xian-cheng-xiang-ying-qing-qiu.html">Python 网络编程socket_server单线程响应请求</a></dd>
+      <dt>六 07 七月 2012</dt>
+      <dd><a href="/dan-pian-ji-eusartchuan-kou-tong-xin.html">单片机EUSART串口通信</a></dd>
+      <dt>五 06 七月 2012</dt>
+      <dd><a href="/pic16f883he-tlc5615dashu-mo-zhuan-hua-shi-yan-hu-xi-deng.html">PIC16F883和TLC5615（DA）数模转化实验，呼吸灯</a></dd>
       <dt>二 03 七月 2012</dt>
       <dd><a href="/picdan-pian-ji-an-jian-jian-ce-dan-shuang-ji-chang-duan-an-shi-bie.html">PIC单片机按键检测，单双击、长短按识别</a></dd>
       <dt>一 02 七月 2012</dt>
