--- a/archives.html
+++ b/archives.html
@@ -45,6 +45,8 @@
 </header> <!-- /.header -->  <div class="container">
   <h1>Archives</h1>
   <dl class="list dl-horizontal">
+      <dt>日 26 六月 2016</dt>
+      <dd><a href="/duo-lu-zhong-duan-fu-yong-qi-tmuxru-men-pei-zhi.html">多路终端复用器tmux入门配置</a></dd>
       <dt>六 25 六月 2016</dt>
       <dd><a href="/pythonyi-bu-iokqueuemo-shi.html">python异步io，kqueue模式</a></dd>
       <dt>二 21 六月 2016</dt>
