--- a/categories.html
+++ b/categories.html
@@ -48,6 +48,7 @@
       <li><a href="/category/about.html">about</a></li>
       <li><a href="/category/cc.html">c/c++</a></li>
       <li><a href="/category/dev-tools.html">dev-tools</a></li>
+      <li><a href="/category/linuxdev-tools.html">linux,dev-tools</a></li>
       <li><a href="/category/mcusinglechip.html">mcu,singlechip</a></li>
       <li><a href="/category/misc.html">misc</a></li>
       <li><a href="/category/mucdac.html">muc,DAC</a></li>
