--- a/tags.html
+++ b/tags.html
@@ -64,7 +64,7 @@
       <li><a href="/tag/ip.html">ip</a> (1)</li>
       <li><a href="/tag/kqueue.html">kqueue</a> (1)</li>
       <li><a href="/tag/led.html">LED</a> (1)</li>
-      <li><a href="/tag/linux.html">linux</a> (4)</li>
+      <li><a href="/tag/linux.html">linux</a> (5)</li>
       <li><a href="/tag/malloc.html">malloc</a> (1)</li>
       <li><a href="/tag/markdown.html">markdown</a> (1)</li>
       <li><a href="/tag/mcu.html">mcu</a> (2)</li>
@@ -83,11 +83,13 @@
       <li><a href="/tag/socket.html">socket</a> (3)</li>
       <li><a href="/tag/tcp.html">tcp</a> (2)</li>
       <li><a href="/tag/telnet.html">telnet</a> (1)</li>
+      <li><a href="/tag/terminal.html">terminal</a> (1)</li>
       <li><a href="/tag/tkinter.html">Tkinter</a> (1)</li>
       <li><a href="/tag/tlc5615.html">TLC5615</a> (1)</li>
+      <li><a href="/tag/tmux.html">tmux</a> (1)</li>
       <li><a href="/tag/tools.html">tools</a> (1)</li>
       <li><a href="/tag/unix.html">unix</a> (2)</li>
-      <li><a href="/tag/vim.html">vim</a> (1)</li>
+      <li><a href="/tag/vim.html">vim</a> (2)</li>
       <li><a href="/tag/wind7.html">wind7</a> (1)</li>
       <li><a href="/tag/xing-lie-jian-ce.html">行列检测</a> (1)</li>
   </ul>
