--- a/tags.html
+++ b/tags.html
@@ -72,7 +72,8 @@
       <li><a href="/tag/network.html">network</a> (1)</li>
       <li><a href="/tag/pi-chu-li.html">批处理</a> (1)</li>
       <li><a href="/tag/pic16f883.html">pic16f883</a> (5)</li>
-      <li><a href="/tag/regex.html">regex</a> (1)</li>
+      <li><a href="/tag/python.html">python</a> (1)</li>
+      <li><a href="/tag/regex.html">regex</a> (2)</li>
       <li><a href="/tag/select.html">select</a> (1)</li>
       <li><a href="/tag/server.html">server</a> (1)</li>
       <li><a href="/tag/shan-deng.html">闪灯</a> (1)</li>
@@ -92,6 +93,7 @@
       <li><a href="/tag/vim.html">vim</a> (2)</li>
       <li><a href="/tag/wind7.html">wind7</a> (1)</li>
       <li><a href="/tag/xing-lie-jian-ce.html">行列检测</a> (1)</li>
+      <li><a href="/tag/zhao-gong-zuo.html">找工作</a> (1)</li>
   </ul>
   </div>
 <footer class="footer">
