--- a/archives.html
+++ b/archives.html
@@ -45,6 +45,10 @@
 </header> <!-- /.header -->  <div class="container">
   <h1>Archives</h1>
   <dl class="list dl-horizontal">
+      <dt>六 17 九月 2016</dt>
+      <dd><a href="/2016xiao-zhao-chu-qi-zong-jie.html">2016校招初期总结</a></dd>
+      <dt>二 06 九月 2016</dt>
+      <dd><a href="/pythonzheng-ze-pi-pei.html">python正则匹配</a></dd>
       <dt>日 26 六月 2016</dt>
       <dd><a href="/duo-lu-zhong-duan-fu-yong-qi-tmuxru-men-pei-zhi.html">多路终端复用器tmux入门配置</a></dd>
       <dt>六 25 六月 2016</dt>
