python math/bin blog

--- a/tags.html
+++ b/tags.html
@@ -49,6 +49,7 @@
       <li><a href="/tag/an-jian-jian-ce.html">按键检测</a> (1)</li>
       <li><a href="/tag/bash.html">bash</a> (3)</li>
       <li><a href="/tag/bc.html">bc</a> (1)</li>
+      <li><a href="/tag/bin.html">bin</a> (1)</li>
       <li><a href="/tag/c.html">c</a> (1)</li>
       <li><a href="/tag/calloc.html">calloc</a> (1)</li>
       <li><a href="/tag/chuan-kou-tong-xin.html">串口通信</a> (1)</li>
@@ -67,6 +68,7 @@
       <li><a href="/tag/linux.html">linux</a> (5)</li>
       <li><a href="/tag/malloc.html">malloc</a> (1)</li>
       <li><a href="/tag/markdown.html">markdown</a> (1)</li>
+      <li><a href="/tag/math.html">math</a> (1)</li>
       <li><a href="/tag/mcu.html">mcu</a> (2)</li>
       <li><a href="/tag/nei-cun.html">内存</a> (1)</li>
       <li><a href="/tag/network.html">network</a> (1)</li>
