--- a/archives.html
+++ b/archives.html
@@ -45,6 +45,8 @@
 </header> <!-- /.header -->  <div class="container">
   <h1>Archives</h1>
   <dl class="list dl-horizontal">
+      <dt>日 18 九月 2016</dt>
+      <dd><a href="/leetcode-power-of-four.html">leetcode-Power of Four</a></dd>
       <dt>六 17 九月 2016</dt>
       <dd><a href="/2016xiao-zhao-chu-qi-zong-jie.html">2016校招初期总结</a></dd>
       <dt>二 06 九月 2016</dt>
