--- a/categories.html
+++ b/categories.html
@@ -54,6 +54,7 @@
       <li><a href="/category/mucdac.html">muc,DAC</a></li>
       <li><a href="/category/muceusart.html">muc,EUSART</a></li>
       <li><a href="/category/python.html">python</a></li>
+      <li><a href="/category/pythonleetcode.html">python,leetcode</a></li>
       <li><a href="/category/shell.html">shell</a></li>
       <li><a href="/category/vps.html">vps</a></li>
       <li><a href="/category/wind7batch.html">wind7,batch</a></li>
