refresh 2016找工作中期总结

--- a/2016xiao-zhao-zhong-qi-zong-jie.html
+++ b/2016xiao-zhao-zhong-qi-zong-jie.html
@@ -70,8 +70,8 @@
 <li>了解面试公司的信息（工作地点、薪水范围、工作压力等）</li>
 <li>规划好时间表，保证准时（面试、笔试、交通状况）</li>
 </ul>
-<p><strong>Tips:</strong>
-1）带水和食物
+<p><strong>Tips:</strong></p>
+<p>1）带水和食物
 大多数时候都需要等待，难免遇到错过饭点，饥饿状态不适合谈重要事情。</p>
 <p>2）不建议频繁霸面，因为等待耗时太多；</p>
 <p>3）投递职位保持一致与自己的项目经历、特点契合
@@ -92,8 +92,8 @@
 拒绝了）。退一万步，内推全挂也是给自己提前预警，也会加紧准备笔试面试。</p>
 <p>8）人品守恒
 有比较满意的offer就及时收手，如果不去的offer及时向HR反馈。</p>
-<p>祝大家都能拿到满意的offer!</p>
 <p>目前拿到3个offer，拒掉一个贝贝网。目前手里Vivo、杭州美登科技。</p>
+<p>祝大家都能拿到满意的offer!</p>
     </div>
   </div>
   <hr class="separator">
