upload linux/vim cmd notes

--- a/archives.html
+++ b/archives.html
@@ -45,6 +45,10 @@
 </header> <!-- /.header -->  <div class="container">
   <h1>Archives</h1>
   <dl class="list dl-horizontal">
+      <dt>二 13 十二月 2016</dt>
+      <dd><a href="/linux-cmd.html">linux cmd</a></dd>
+      <dt>二 13 十二月 2016</dt>
+      <dd><a href="/vim-cmd.html">vim cmd</a></dd>
       <dt>一 26 九月 2016</dt>
       <dd><a href="/2016xiao-zhao-zhong-qi-zong-jie.html">2016校招中期总结</a></dd>
       <dt>日 18 九月 2016</dt>
