--- a/tags.html
+++ b/tags.html
@@ -58,6 +58,7 @@
       <li><a href="/tag/dan-xian-cheng.html">单线程</a> (1)</li>
       <li><a href="/tag/ding-shi-qi.html">定时器</a> (1)</li>
       <li><a href="/tag/eusart.html">EUSART</a> (1)</li>
+      <li><a href="/tag/fen-xiang.html">分享</a> (1)</li>
       <li><a href="/tag/gui.html">GUI</a> (1)</li>
       <li><a href="/tag/hu-xi-deng-shu-mo-zhuan-huan.html">呼吸灯，数模转换</a> (1)</li>
       <li><a href="/tag/hui-bian.html">汇编</a> (1)</li>
@@ -65,7 +66,7 @@
       <li><a href="/tag/ip.html">ip</a> (1)</li>
       <li><a href="/tag/kqueue.html">kqueue</a> (1)</li>
       <li><a href="/tag/led.html">LED</a> (1)</li>
-      <li><a href="/tag/linux.html">linux</a> (5)</li>
+      <li><a href="/tag/linux.html">Linux</a> (7)</li>
       <li><a href="/tag/malloc.html">malloc</a> (1)</li>
       <li><a href="/tag/markdown.html">markdown</a> (1)</li>
       <li><a href="/tag/math.html">math</a> (1)</li>
