update other documents for new blog to show

--- a/archives.html
+++ b/archives.html
@@ -45,6 +45,8 @@
 </header> <!-- /.header -->  <div class="container">
   <h1>Archives</h1>
   <dl class="list dl-horizontal">
+      <dt>三 11 一月 2017</dt>
+      <dd><a href="/ctagspython-vim-work-for-autocompletetag-jump.html">ctags&python-vim work for autocomplete&tag-jump</a></dd>
       <dt>二 13 十二月 2016</dt>
       <dd><a href="/linux-cmd.html">linux cmd</a></dd>
       <dt>二 13 十二月 2016</dt>
