--- a/tags.html
+++ b/tags.html
@@ -66,7 +66,8 @@
       <li><a href="/tag/ip.html">ip</a> (1)</li>
       <li><a href="/tag/kqueue.html">kqueue</a> (1)</li>
       <li><a href="/tag/led.html">LED</a> (1)</li>
-      <li><a href="/tag/linux.html">Linux</a> (7)</li>
+      <li><a href="/tag/linux.html">Linux</a> (8)</li>
+      <li><a href="/tag/mac.html">mac</a> (1)</li>
       <li><a href="/tag/malloc.html">malloc</a> (1)</li>
       <li><a href="/tag/markdown.html">markdown</a> (1)</li>
       <li><a href="/tag/math.html">math</a> (1)</li>
@@ -93,7 +94,7 @@
       <li><a href="/tag/tmux.html">tmux</a> (1)</li>
       <li><a href="/tag/tools.html">tools</a> (1)</li>
       <li><a href="/tag/unix.html">unix</a> (2)</li>
-      <li><a href="/tag/vim.html">vim</a> (2)</li>
+      <li><a href="/tag/vim.html">vim</a> (3)</li>
       <li><a href="/tag/wind7.html">wind7</a> (1)</li>
       <li><a href="/tag/xing-lie-jian-ce.html">行列检测</a> (1)</li>
       <li><a href="/tag/zhao-gong-zuo.html">找工作</a> (2)</li>
