add blog: 2017 summarizes

--- a/tags.html
+++ b/tags.html
@@ -102,6 +102,7 @@
       <li><a href="/tag/wind7.html">wind7</a> (1)</li>
       <li><a href="/tag/xing-lie-jian-ce.html">行列检测</a> (1)</li>
       <li><a href="/tag/zhao-gong-zuo.html">找工作</a> (2)</li>
+      <li><a href="/tag/zong-jie.html">总结</a> (1)</li>
   </ul>
   </div>
 <footer class="footer">
