feat:更新一篇失效的文章

--- a/archives.html
+++ b/archives.html
@@ -84,7 +84,7 @@
       <dt>一 21 三月 2016</dt>
       <dd><a href="/jetbrains-makes-its-products-free-for-students.html">JetBrains Makes its Products Free for Students</a></dd>
       <dt>四 11 九月 2014</dt>
-      <dd><a href="/the-way-to-access-google-in-china.html">The way to access Google in China</a></dd>
+      <dd><a href="/the-way-to-access-google-in-chinashi-xiao-2019-5-20.html">The way to access Google in China(失效2019-5-20)</a></dd>
       <dt>日 31 八月 2014</dt>
       <dd><a href="/linux-an-zhuang-telnet.html">Linux 安装 Telnet</a></dd>
       <dt>六 30 八月 2014</dt>
