--- a/tags.html
+++ b/tags.html
@@ -58,7 +58,7 @@
       <li><a href="/tag/dac.html">DAC</a> (1)</li>
       <li><a href="/tag/dan-pian-ji.html">单片机</a> (1)</li>
       <li><a href="/tag/dan-xian-cheng.html">单线程</a> (1)</li>
-      <li><a href="/tag/dict.html">dict</a> (1)</li>
+      <li><a href="/tag/dict.html">dict</a> (2)</li>
       <li><a href="/tag/ding-shi-qi.html">定时器</a> (1)</li>
       <li><a href="/tag/eusart.html">EUSART</a> (1)</li>
       <li><a href="/tag/fen-xiang.html">分享</a> (1)</li>
@@ -75,9 +75,10 @@
       <li><a href="/tag/markdown.html">markdown</a> (1)</li>
       <li><a href="/tag/math.html">math</a> (1)</li>
       <li><a href="/tag/mcu.html">mcu</a> (2)</li>
+      <li><a href="/tag/mongodb.html">mongodb</a> (1)</li>
       <li><a href="/tag/nei-cun.html">内存</a> (1)</li>
       <li><a href="/tag/network.html">network</a> (1)</li>
-      <li><a href="/tag/pandas.html">pandas</a> (1)</li>
+      <li><a href="/tag/pandas.html">pandas</a> (2)</li>
       <li><a href="/tag/pi-chu-li.html">批处理</a> (1)</li>
       <li><a href="/tag/pic16f883.html">pic16f883</a> (5)</li>
       <li><a href="/tag/python.html">python</a> (1)</li>
@@ -90,6 +91,7 @@
       <li><a href="/tag/shuang-ji-shi-bie.html">双击识别</a> (1)</li>
       <li><a href="/tag/shuang-xiang-shu-ju-chuan-shu.html">双向数据传输</a> (1)</li>
       <li><a href="/tag/socket.html">socket</a> (3)</li>
+      <li><a href="/tag/sqlserver.html">sqlserver</a> (1)</li>
       <li><a href="/tag/ssl.html">ssl</a> (1)</li>
       <li><a href="/tag/tcp.html">tcp</a> (2)</li>
       <li><a href="/tag/telnet.html">telnet</a> (1)</li>
